# notari

./: .editorconfig  .gitignore  LICENSE  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
.github/workflows/: test.yml
.kiro/specs/notari-proof-system/: design.md  requirements.md  tasks.md
.kiro/specs/tray-based-ui/: design.md  requirements.md  tasks.md
.kiro/steering/: development-practices.md  product.md  structure.md  tech.md
contracts/: NotariRegistry.sol  README.md
docs/: ARCHITECTURE.md  SETUP.md  anchoring.md  deep-verification.md  encryption.md  recording.md
docs/dev/: CHANGELOG-encryption-fix.md  encryption-implementation.md  encryption-quick-reference.md
docs/user-guides/: encryption-guide.md
scripts/: test-all.sh
src/: App.test.tsx  App.tsx  hero.ts  main.tsx  provider.tsx
src-tauri/: .gitignore  .taurignore  Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/macos/: SCKRecorder.swift
src-tauri/src/: blockchain_commands.rs  dev_logger.rs  error.rs  events.rs  lib.rs  logger.rs  main.rs  recording_commands.rs  recording_manager.rs  storage.rs  video_server.rs  window_manager.rs
src-tauri/src/ai/: analysis.rs  mod.rs  models.rs  patterns.rs  processor.rs  tests.rs
src-tauri/src/blockchain/: anchor.rs  arweave.rs  ethereum.rs  merkle.rs  mod.rs  tests.rs  types.rs
src-tauri/src/capture/: encryption.rs  engine.rs  mod.rs  tests.rs  timestamp.rs  types.rs
src-tauri/src/capture/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/commands/: ai.rs  blockchain.rs  capture.rs  capture_tests.rs  compatibility.rs  crypto.rs  hotkey.rs  mod.rs  notifications.rs  popover.rs  proof_pack.rs  redaction.rs  session.rs  settings.rs  tray.rs  tray_integration_tests.rs  verification.rs
src-tauri/src/crypto/: encryption.rs  keychain.rs  keys.rs  manager.rs  mod.rs  signatures.rs
src-tauri/src/evidence/: encryption.rs  encryption_keys.rs  hash.rs  keychain.rs  manifest.rs  manifest_builder.rs  mod.rs  proof_pack.rs  signature.rs  verification.rs
src-tauri/src/evidence/blockchain/: config.rs  config_builder.rs  ethereum.rs  factory.rs  mock.rs  mod.rs  tests.rs  types.rs  wallet.rs
src-tauri/src/hotkey/: mod.rs
src-tauri/src/notifications/: mod.rs  tests.rs
src-tauri/src/pipeline/: context.rs  core.rs  executor.rs  mod.rs
src-tauri/src/pipeline/stages/: cleanup.rs  encrypt.rs  hash.rs  manifest.rs  mod.rs  package.rs  sign.rs
src-tauri/src/recording_manager/: builder.rs  linux.rs  macos.rs  windows.rs
src-tauri/src/redaction/: commitment.rs  engine.rs  mod.rs  proofs.rs
src-tauri/src/repository/: factory.rs  file.rs  keychain.rs  mod.rs  traits.rs
src-tauri/src/state_machine/: mod.rs  states.rs  transitions.rs  wrapper.rs
src-tauri/src/storage/: database.rs  migrations.rs  mod.rs  session_store.rs  session_store_simple.rs  tests.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/verification/: analytics.rs  engine.rs  mod.rs  server.rs  tests.rs  types.rs
src-tauri/src/window/: mod.rs  popover.rs
src-tauri/src/window_manager/: linux.rs  macos.rs  windows.rs
src-tauri/tests/: integration_test.rs
src/components/: AppHeader.tsx  ApplicationSelector.tsx  BlockchainAnchorButton.tsx  BlockchainSettings.tsx  DevMode.tsx  DevModeSelector.tsx  EncryptionPasswordModal.tsx  EncryptionSettings.tsx  ErrorBoundary.tsx  KeyManagement.tsx  KeyManagementModal.tsx  LogViewer.tsx  PipelineProgress.tsx  Popover.tsx  RecordingPreferences.tsx  RecordingStatus.tsx  RecordingsLibrary.tsx  SettingsModal.tsx  TagInput.tsx  ThemeProvider.tsx  ThemeToggle.tsx  VerificationModal.tsx  VideoPlayer.tsx  WindowPicker.tsx  WindowThumbnail.tsx
src/components/__tests__/: App.test.tsx  AppHeader.test.tsx  ErrorBoundary.test.tsx  Popover.test.tsx  RecordingStatus.test.tsx  TagInput.test.tsx  ThemeToggle.test.tsx  WindowPicker.test.tsx  WindowThumbnail.test.tsx
src/components/layout/: AdaptiveLayout.tsx  MainLayout.tsx
src/components/modes/: LoggedInMode.tsx  LoginMode.tsx  OnboardingMode.tsx  RecordMode.tsx  RecordMode.tsx.backup
src/components/proofpack/: ProofPackConfiguration.tsx  ProofPackExport.tsx  ProofPackPreview.tsx  ProofPackWizard.tsx  SessionSelection.tsx
src/components/redaction/: RedactionCanvas.tsx  RedactionControls.tsx  RedactionInterface.tsx  RedactionManager.tsx  RedactionPreview.tsx  RedactionSelector.tsx
src/components/session/: SessionCard.tsx  SessionConfigModal.tsx  SessionControls.tsx  SessionManagement.tsx
src/components/tabs/: RecordedVideosTab.tsx  RecordingTab.tsx  VerifyTab.tsx
src/components/tray/: LazyTrayComponents.tsx  ProofPackManager.tsx  RecentSessionsList.tsx  SessionControls.tsx  TrayApp.tsx  TrayDashboard.tsx  TrayErrorBoundary.tsx  TrayErrorRecoveryScreen.tsx  TrayPerformanceMonitor.tsx  TrayRouter.tsx  TraySettings.tsx  index.ts
src/components/verification/: TrustScoreVisualization.tsx  VerificationReport.tsx  VerificationResults.tsx
src/contexts/: AppModeContext.tsx
src/hooks/: useApplicationPreferences.ts  useApplicationPreferencesQuery.ts  useDebounce.ts  useDevLogger.ts  useEventListener.ts  useEvidence.ts  useLogger.ts  useOptimizedEventHandling.ts  useRecordingSystem.ts  useRedactionEngine.ts  useToast.ts  useTrayErrorHandling.ts  useTrayState.ts
src/hooks/__tests__/: useDebounce.test.ts  useEvidence.test.tsx  useLogger.test.ts  useRecordingSystem.test.tsx  useRedactionEngine.test.ts  useTrayErrorHandling.test.ts  useTrayState.test.ts
src/lib/: preferences-queries.ts  queryClient.ts  tauri-queries.ts
src/services/: index.ts  traySync.ts
src/stores/: trayStore.ts
src/styles/: globals.css
src/test/: setup.ts
src/types/: ai.types.ts  blockchain.types.ts  crypto.types.ts  events.ts  index.ts  preferences.ts  proofPack.types.ts  recording.ts  redaction.types.ts  session.types.ts  tray.types.ts  user.types.ts  verification.types.ts  window.ts
src/utils/: logger.ts
(+55 files in other folders)
