[package]
name = "notari"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "notari_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptographic dependencies
ring = "0.17"
aes-gcm = "0.10"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.22"
thiserror = "1.0"

# Capture and monitoring dependencies
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
image = "0.25"
rdev = "0.4"
async-trait = "0.1"

# Database dependencies
rusqlite = { version = "0.32", features = ["bundled", "chrono", "uuid"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate"] }
hex = "0.4"
sha2 = "0.10"
blake3 = "1.5"

# AI/ML dependencies (statistical analysis)
ndarray = "0.16"

# Blockchain dependencies
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
url = "2.5"
ethers = { version = "2.0", features = ["rustls"] }
web3 = "0.19"
arweave-rs = "0.2"
futures = "0.3"

# Web server dependencies for verification API
axum = { version = "0.7", features = ["json", "tokio", "tower-log"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
hyper = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System information dependencies
hostname = "0.4"
iana-time-zone = "0.1"
sys-locale = "0.3"

# Global hotkey dependencies
global-hotkey = "0.6"

# Notification dependencies
tauri-plugin-notification = "2.0.0"

# Test dependencies
[dev-dependencies]
tempfile = "3.8"

# Platform-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Security_Credentials",
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }
windows-capture = "1.3"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.11"
core-graphics = "0.23"
core-foundation = "0.9"

