[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
cc = "1.2.39"
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"

# Screen capture and window management
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
dirs = "6.0.0"
tauri-plugin-dialog = "2.4.0"
tokio = { version = "1.0", features = ["sync", "time"] }
crossbeam-channel = "0.5"

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.9"
image = "0.24"
screencapturekit = "0.3.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.12", features = ["all-extensions"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
