[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
cc = "1.2.39"
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"

# Screen capture and window management
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
dirs = "6.0.0"
tauri-plugin-dialog = "2.4.0"
tokio = { version = "1.0", features = ["sync", "time", "rt-multi-thread", "macros"] }
crossbeam-channel = "0.5"
async-trait = "0.1"
thiserror = "2.0"

# Video streaming server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
once_cell = "1.19"

# Evidence system (Phase 1)
ed25519-dalek = "2.1"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"

# Evidence system (Phase 2 - Encryption)
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
crypto_box = "0.9"  # X25519-XSalsa20-Poly1305 for public key encryption
zip = "4.2.0"

# Evidence system (Phase 2 - Blockchain)
ethers = { version = "2.0", features = ["abigen", "ws"] }

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.9"
image = "0.24"
screencapturekit = "0.3.6"
security-framework = "2.9"  # Keychain access

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.12", features = ["all-extensions"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.8"
